added handling without email sending

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 POSTGRES_CONN="postgres://api_user:api_password@postgres_container:5432/auth_service?application_name=medods-test&sslmode=disable"
-LOG_LEVEL="local"
+LOG_LEVEL="prod"
+SMTP_ENABLE="off"
